fixtures/valid/v13-checks.crumb
BEGIN CRUMB
v=1.3
kind=task
title=Handoff with verification report
source=cursor.agent
---
[goal]
Hand off after verification.

[context]
- Tests ran locally

[constraints]
- No production writes

[checks]
- tests :: pass
- coverage :: 87% threshold=85
- lint :: fail note=unused_import
END CRUMB
