fixtures/invalid/missing-separator.crumb
BEGIN CRUMB
v=1.1
kind=task
title=No separator
source=cli
[goal]
No --- between headers and body.

[context]
- Parser MUST reject.

[constraints]
- Parser MUST reject.
END CRUMB
